k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etmsys-backend
  namespace: etmsys
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: etmsys-backend

  template:
    metadata:
      labels:
        app: etmsys-backend

    spec:
      containers:
        - name: backend
          image: piraidasan/etmsys-backend:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 9093

          readinessProbe:
            httpGet:
              path: /etmsys/v1/user/captcha
              port: 9093
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: 9093
            initialDelaySeconds: 60
            periodSeconds: 20

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
