k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etmsys-backend
  namespace: etmsys

spec:
  type: ClusterIP

  selector:
    app: etmsys-backend

  ports:
    - name: http
      port: 9093
      targetPort: 9093
      protocol: TCP
