k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etmsys-frontend
  namespace: etmsys

spec:
  type: NodePort

  selector:
    app: etmsys-frontend

  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
