k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etmsys-ingress
  namespace: etmsys

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"

spec:

  ingressClassName: nginx

  rules:

    - host: etmsys.local

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: etmsys-frontend
                port:
                  number: 80

          - path: /etmsys
            pathType: Prefix

            backend:
              service:
                name: etmsys-backend
                port:
                  number: 9093
